[EME] Fix typo in WebM sanitization variable https://bugs.webkit.org/show_bug.cgi?id=189789

Patch by Yacine Bandou <yacine.bandou@softathome.com> on 2018-09-21
Reviewed by Xabier Rodriguez-Calvar.

This commit corrects a typo in the name of a local variable, sanitizedBuffer
instead of sanitazedBuffer.

* Modules/encryptedmedia/InitDataRegistry.cpp:
(WebCore::extractKeyIDsWebM):

Canonical link: https://commits.webkit.org/204776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236307 268f45cc-cd09-0410-ab3c-d52691b4dbfc